# advent_of_code_2021

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  template.cpp
cmake/: Conan.cmake
include/: getline.hpp
include/rd/: generator.hpp  lval_accumulate.hpp  operators.hpp
include/tl/: basic_iterator.hpp  enumerate.hpp  fold.hpp  generator.hpp  getlines.hpp  zip.hpp
include/tl/utility/: tuple_utils.hpp
src/: CMakeLists.txt
src/day1/: day1.cpp
src/day10/: day10.cpp
src/day11/: day11.cpp
src/day12/: day12.cpp
src/day13/: day13.cpp
src/day14/: day14.cpp
src/day15/: day15.cpp
src/day16/: day16.cpp
src/day17/: day17.cpp
src/day2/: day2.cpp
src/day3/: day3.cpp
src/day4/: day4.cpp
src/day5/: day5.cpp
src/day6/: day6.cpp
src/day7/: day7.cpp
src/day8/: day8.cpp
src/day9/: day9.cpp
