file(GLOB_RECURSE source_list "**.cpp")
foreach(file ${source_list})
  get_filename_component(filename ${file} NAME_WE)
  add_executable(${filename} ${file})
  target_include_directories(${filename} PRIVATE ../include)
  target_link_libraries(${filename} PRIVATE project_options)
  target_link_libraries(${filename} PUBLIC CONAN_PKG::ctre)
endforeach()
